hphp/test/slow/clsmeth-nocompat/abstr-meth-trait.php.expectf
Fatal error: Cannot call abstract method C::foo in %s/test/slow/clsmeth-nocompat/abstr-meth-trait.php on line 12
